[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Objects/Circuit/OhmsLaw.png" type="Texture" id=2]
[ext_resource path="res://Resources/Puzzles/Chapter II/OhmsLaw/OhmsLaw.gd" type="Script" id=3]

[node name="OhmsLaw" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Background" parent="." index="0"]
color = Color( 0.564706, 0.564706, 0.564706, 1 )

[node name="InstructionLabel" type="Label" parent="." index="2"]
margin_left = 92.1417
margin_top = 9.33081
margin_right = 216.142
margin_bottom = 23.3308
text = "Calculate Va and Ia."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="3"]
margin_left = 110.0
margin_top = 153.0
margin_right = 214.0
margin_bottom = 167.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="." index="4"]
position = Vector2( 167.865, 95.0576 )
scale = Vector2( 0.524519, 0.524519 )
texture = ExtResource( 2 )

[node name="VoltageA" type="LineEdit" parent="." index="5"]
margin_left = 47.9358
margin_top = 149.159
margin_right = 105.936
margin_bottom = 173.159
align = 1
placeholder_text = "Va"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentA" type="LineEdit" parent="." index="6"]
margin_left = 214.492
margin_top = 148.832
margin_right = 272.492
margin_bottom = 172.832
align = 1
placeholder_text = "Ia"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="VoltageA" to="." method="_on_VoltageA_text_entered"]
[connection signal="text_entered" from="CurrentA" to="." method="_on_CurrentA_text_entered"]
